[project]
name = "envclass"
version = "0.2.0"
description = "Uma classe Python projetada para simplificar o gerenciamento de variáveis de ambiente em seus aplicativos, reduzindo a repetição de código."
authors = [
    {name = "brunodavi",email = "brunodaviandrade2000@gmail.com"},
]

dependencies = []

requires-python = ">=3.10"
readme = "README.md"
license = {text = "GNU General Public License v3.0"}


[tool.pdm.scripts]
start = 'pdm run ./src/envclass/envclass.py'
test = 'python -m unittest'
