[project]
name = "envclass"
version = "0.1.2"
description = "A Python class that simplifies the management of environment variables in your applications, eliminating the need for code repetition."
authors = [
    {name = "brunodavi", email = "48166556+brunodavi@users.noreply.github.com"},
]

dependencies = []

requires-python = ">=3.7"
readme = "README.md"
license = {text = "GNU General Public License v3.0"}


classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Operating System :: OS Independent",

    "Environment :: Web Environment",
    "Environment :: Console",

    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",

    "Natural Language :: English",
    "Natural Language :: Portuguese (Brazilian)",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/brunodavi/envclass"
Issues = "https://github.com/brunodavi/envclass/issues"


[tool.pdm.scripts]
start = "pdm run ./src/envclass/envclass.py"
test = "python -m unittest"

publish = "pdm publish --username __token__ --password $PYPI_ENVCLASS_KEY"